<resources>
    <string name="app_name">musix</string>
    <string name="APP_NAME">MUSIX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shr_button_next">download</string>
    <string name="shr_button_cancel">cancle</string>
    <string name="prevew">preview</string>
    <string name="title">Ishare Tere Karti Nigah - Sumit Goswami</string>
    <string name="tag">tag</string>
    <string name="download">Download</string>
    <string name="text_label_1">Ringstone</string>
    <string name="text_label_2">Favorite</string>
    <string name="text_label_3">Profile</string>
    <string name="action_1">play</string>
    <string name="action_2">stop</string>
    <string name="action_3">listen</string>
    <string name="copy">copy</string>
    <string name="cancel">cancel</string>
    <string name="ok">ok</string>
    <string name="hi">Hi~</string>
    <string name="download_tips">Watch ads then download for free!</string>
    <string name="setringtone_tips">Watch ads then set ringtones for free!</string>

    <string name="download_tips_failed">Download failed.</string>
    <string name="download_tips_success">Download success.</string>
    <string name="favorite">favorite</string>
    <string name="more">more</string>
    <string name="search">Search</string>
    <string name="setting">Setting</string>
    <string name="about_us">About Musix</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="empty_not_saved">。。。。。。。。</string>
    <string name="search_hint">search</string>
    <string name="myringtones">My Ringtones History</string>
    <string name="download_tips_already_have">You already have this ringtone.</string>
    <string name="about_musix">Musix Ringtones is a collection of the most popular ringtones for Android phone. More than 500 popular ringtones in Musix Ringtones. You can set them as your ringtone, message, alarm, notifications.</string>
    <string name="about_version">Version: 2.0</string>
    <string name="about_author">Gmail:whywinxxh@gmail.com</string>
    <string name="about_name">UI and Coding: Frank Xi</string>

</resources>