<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBlack"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/ringtone_play"
        android:src="@drawable/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/ringtone_title"
        android:textColor="@color/colorWhite"
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></TextView>

    <TextView
        android:id="@+id/ringtone_tag"
        android:text="@string/tag"
        android:textColor="@color/colorGray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/ringtone_download"
        android:text="@string/download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorDarkBlue"/>

</LinearLayout>